--- a/docs/2022/2022-01.md
+++ b/docs/2022/2022-01.md
@@ -1,4 +1,6 @@
 # 一月
 
 ## 08
+<img src="https://static.fungenomics.com/images/2022/01/2022-01-08.png" alt="2022-01-08" style="zoom:50%;" />
+
 ![2022-01-08](https://static.fungenomics.com/images/2022/01/2022-01-08.png)
